Faculty part completed
Changes in faculty

--- a/pages/faculty/1.html
+++ b/pages/faculty/1.html
@@ -2,8 +2,6 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <link rel="stylesheet" href="../../layout/styles/layout.css" type="text/css" />
-<script type="text/javascript" src="../../layout/scripts/jquery.min.js"></script>
-<!-- liteAccordion is Homepage Only -->
 <link rel="stylesheet" href="../../layout/scripts/liteaccordion-v2.2/css/liteaccordion.css" type="text/css" />
 </head>
 <body style="background-image:none">
@@ -12,16 +10,16 @@
 
 <div class="wrapper row4" style="height:1000px;">
   <div id="container" class="clear"> 
-    <div id="content" style="width:65%">
-      <h1 class="title">Dr. Umair Ali Khan</h1>
-      <img src="../../images/umair.jpg" style="float:left;height:200px;">
+    <div id="content" style="width:65%;">
+      <h1 class="title">Prof. Dr. Nisar Ahmed Memon</h1>
+      <img src="../../images/nisar.jpg" style="float:left;height:200px;">
 	  <table style="width:100%;color:BLACK;font-size:13;border:0;margin-top:240px;">
 		  <tr>
 			<td>
 			<b>Position:</b>
 			</td>
 			<td>
-			Associate Professor
+			Professor (On Lien)
 			</td>
 		  </tr>
 		  <tr>
@@ -29,7 +27,7 @@
 			<b>Email:</b>
 			</td>
 			<td>
-			umair.khan@quest.edu.pk
+			nisar@quest.edu.pk
 			</td>
 		  </tr>
 		  <tr>
@@ -37,7 +35,7 @@
 			<b>Phone:</b>
 			</td>
 			<td>
-			0244-9370381-5    Ext.    2131
+			0244-9370381-5    Ext.    2130
 			</td>
 		  </tr>
 		  <tr>
@@ -45,9 +43,9 @@
 			<b>Qualification:</b>
 			</td>
 			<td>
-			PhD (Austria): Dynamic power management in portable devices</br>
-			MS (Austria): Intelligent Transportation Systems</br>
-			B.E (QUEST): Computer Systems Engineering 
+			PhD (GIK Topi)</br>
+			M. E. (MUET Jamshoro)</br>
+			B. E. (MUET Jamshoro)</br>
 			</td>
 		  </tr>
 		  <tr>
@@ -55,8 +53,7 @@
 			<b>Research Interest:</b>
 			</td>
 			<td>
-			-
-			</td>
+			Water Marking</br>
 		  </tr>
 		  <tr>
 			<td>
@@ -107,6 +104,7 @@
 			</td>
 		  </tr>
 	  </table>
+
     </div>
 	
   </div>
