--- a/pages/faculty/13.html
+++ b/pages/faculty/13.html
@@ -12,16 +12,16 @@
 
 <div class="wrapper row4" style="height:1000px;">
   <div id="container" class="clear"> 
-    <div id="content" style="width:65%">
-      <h1 class="title">Dr. Umair Ali Khan</h1>
-      <img src="../../images/umair.jpg" style="float:left;height:200px;">
+    <div id="content" style="width:65%;">
+      <h1 class="title">Dr. Irfana Memon</h1>
+     <img src="../../images/irfana.jpg" style="float:left;height:200px;">
 	  <table style="width:100%;color:BLACK;font-size:13;border:0;margin-top:240px;">
 		  <tr>
 			<td>
 			<b>Position:</b>
 			</td>
 			<td>
-			Associate Professor
+			Assistant Professor
 			</td>
 		  </tr>
 		  <tr>
@@ -29,7 +29,7 @@
 			<b>Email:</b>
 			</td>
 			<td>
-			umair.khan@quest.edu.pk
+			irfanahameed@quest.edu.pk
 			</td>
 		  </tr>
 		  <tr>
@@ -45,9 +45,9 @@
 			<b>Qualification:</b>
 			</td>
 			<td>
-			PhD (Austria): Dynamic power management in portable devices</br>
-			MS (Austria): Intelligent Transportation Systems</br>
-			B.E (QUEST): Computer Systems Engineering 
+			PhD (Computer Systems) Aix-Marseille University Marseille, France </br>
+			Master (Telecommunication network and services) INSA Lyon, France </br>
+			B.E (Computer systems engineering) QUEST Nawabshah 
 			</td>
 		  </tr>
 		  <tr>
@@ -55,7 +55,14 @@
 			<b>Research Interest:</b>
 			</td>
 			<td>
-			-
+			Computer Science, Computer Security And Reliability,</br> 
+			Secure and Critical Communicating Systems, </br>
+			Wireless networks, Ad-hoc networks, Embedded Systems,</br>
+			Distributed Computing, Parallel Computing, </br>
+			Philosophy of Computer Science, Communication Theory,</br> 
+			Embedded Networks, Embedded Communicating Systems,Anonymity,</br> 
+			Security and privacy of data issues in wireless ad hoc networks, </br>
+			cloud computing 
 			</td>
 		  </tr>
 		  <tr>
@@ -63,7 +70,7 @@
 			<b>Experience:</b>
 			</td>
 			<td>
-			-
+			Wireless ad hoc networks, Embedded networks
 			</td>
 		  </tr>
 		  <tr>
@@ -71,7 +78,7 @@
 			<b>Current Research:</b>
 			</td>
 			<td>
-			-
+			Wireless sensor networks, cloud computing
 			</td>
 		  </tr>
 		  <tr>
@@ -79,7 +86,7 @@
 			<b>Courses Currently Teaching:</b>
 			</td>
 			<td>
-			-
+			Data structures and Algorithm
 			</td>
 		  </tr>
 		  <tr>
@@ -87,7 +94,10 @@
 			<b>Courses Taught Previously:</b>
 			</td>
 			<td>
-			-
+			Data structures and algorithm, Functional programming,</br>
+			Wireless and mobile communication, </br>
+			Network security and cryptography, ITC, DSP, DLD,</br>
+			Electronic & computer workshop
 			</td>
 		  </tr>
 		  <tr>
@@ -103,7 +113,7 @@
 			<b>Professional Memberships:</b>
 			</td>
 			<td>
-			-
+			Pakistan Engineering Council (PEC)
 			</td>
 		  </tr>
 	  </table>
