--- a/pages/faculty/17.html
+++ b/pages/faculty/17.html
@@ -13,15 +13,15 @@
 <div class="wrapper row4" style="height:1000px;">
   <div id="container" class="clear"> 
     <div id="content" style="width:65%;">
-      <h1 class="title">Dr. Fizza Abbas</h1>
-      <img src="../../images/fiza.jpg" style="float:left;height:200px;">
+      <h1 class="title">Engr. Zuhaib Ahmed Shaikh</h1>
+     <img src="../../images/zuhaib.jpg" style="float:left;height:200px;">
 	  <table style="width:100%;color:BLACK;font-size:13;border:0;margin-top:240px;">
 		  <tr>
 			<td>
 			<b>Position:</b>
 			</td>
 			<td>
-			Assistant Professor 
+			Assistant Professor
 			</td>
 		  </tr>
 		  <tr>
@@ -29,7 +29,7 @@
 			<b>Email:</b>
 			</td>
 			<td>
-			fiza@quest.edu.pk
+			zuhaib.shaikh@quest.edu.pk
 			</td>
 		  </tr>
 		  <tr>
@@ -37,7 +37,7 @@
 			<b>Phone:</b>
 			</td>
 			<td>
-			0244-9370381-5    Ext.    2131
+			0244-9370381-5    Ext.    2638
 			</td>
 		  </tr>
 		  <tr>
@@ -45,9 +45,8 @@
 			<b>Qualification:</b>
 			</td>
 			<td>
-			B.E (QUEST)</br>
-            M.E (MUET) <br>
-			PhD (S.Korea)
+			B.E (Computer Systems) QUEST Nawabshah</br>
+            M.E (Computer Systems) QUEST Nawabshah
 			</td>
 		  </tr>
 		  <tr>
@@ -55,7 +54,7 @@
 			<b>Research Interest:</b>
 			</td>
 			<td>
-			-
+			Machine Learning, Image processing, computer vision, Embedded Systems
 			</td>
 		  </tr>
 		  <tr>
@@ -63,7 +62,9 @@
 			<b>Experience:</b>
 			</td>
 			<td>
-			-
+			Assistant Professor, CSE Department, QUEST Nawabshah from 02-01-2016 to-date
+            <br>Lecturer in CSE department, QUEST, N/shah from 14-01-2008 to 01-01-2016
+            <br>Technical Support Executive in eWorld, Karachi form 10-10-2007 to 12-01-2008
 			</td>
 		  </tr>
 		  <tr>
@@ -71,7 +72,7 @@
 			<b>Current Research:</b>
 			</td>
 			<td>
-			-
+			Machine Learning based ANPR System
 			</td>
 		  </tr>
 		  <tr>
@@ -79,7 +80,7 @@
 			<b>Courses Currently Teaching:</b>
 			</td>
 			<td>
-			-
+			Object Oriented Programming in C++
 			</td>
 		  </tr>
 		  <tr>
@@ -87,7 +88,9 @@
 			<b>Courses Taught Previously:</b>
 			</td>
 			<td>
-			-
+			Operating Systems, Fundamentals of Algorithms,
+            C++ Programming, Introduction to Computers, Computer Systems & Programming,
+            Computer Aided Engineering Design, Basic Electrical Engineering
 			</td>
 		  </tr>
 		  <tr>
@@ -95,7 +98,10 @@
 			<b>Publications:</b>
 			</td>
 			<td>
-			-
+			1- Zuhaib A. Shaikh, et al. "Machine Learning Based Number Plate Detection and Recognition, International Conference on Pattern Recognition Applications and Methods,Italy, 2016.
+            <br>2- Zuhaib A. Shaikh, Umair A. Khan, "Number Plate Detection & Recognition using Deformable Part Models, Germany LAMBERT Academic Publishing, 2015. Print
+            <br>3- Zuhaib A. Shaikh, et al. "An Autonomic Service Based System Using Machine Learning", MCCT-14 International Conference, 2014.
+            <br>4- Sandeep Talreja, Zuhaib A. Shaikh, et al. Connecting Mobiles Through Internet (VoWifi), IEEEP Multi-topic Symposium, 2006. 
 			</td>
 		  </tr>
 		  <tr>
@@ -103,10 +109,11 @@
 			<b>Professional Memberships:</b>
 			</td>
 			<td>
-			-
+			Pakistan Engineering Council (PEC)
 			</td>
 		  </tr>
 	  </table>
+	  
     </div>
 	
   </div>
