--- a/pages/faculty/18.html
+++ b/pages/faculty/18.html
@@ -12,16 +12,16 @@
 
 <div class="wrapper row4" style="height:1000px;">
   <div id="container" class="clear"> 
-    <div id="content" style="width:65%">
-      <h1 class="title">Dr. Umair Ali Khan</h1>
-      <img src="../../images/umair.jpg" style="float:left;height:200px;">
+    <div id="content" style="width:65%;">
+      <h1 class="title">Engr. Muhammad Amir Bhutto</h1>
+      <img src="../../images/amir.jpg" style="float:left;height:200px;">
 	  <table style="width:100%;color:BLACK;font-size:13;border:0;margin-top:240px;">
 		  <tr>
 			<td>
 			<b>Position:</b>
 			</td>
 			<td>
-			Associate Professor
+			Assistant Professor
 			</td>
 		  </tr>
 		  <tr>
@@ -29,7 +29,7 @@
 			<b>Email:</b>
 			</td>
 			<td>
-			umair.khan@quest.edu.pk
+			aamirbhutto@quest.edu.pk
 			</td>
 		  </tr>
 		  <tr>
@@ -45,9 +45,8 @@
 			<b>Qualification:</b>
 			</td>
 			<td>
-			PhD (Austria): Dynamic power management in portable devices</br>
-			MS (Austria): Intelligent Transportation Systems</br>
-			B.E (QUEST): Computer Systems Engineering 
+			M.E (Computer Systems)
+            B.E (Computer Systems)
 			</td>
 		  </tr>
 		  <tr>
@@ -55,7 +54,9 @@
 			<b>Research Interest:</b>
 			</td>
 			<td>
-			-
+			Mobile Broadband Networks</br>
+            Computer Network Management</br>
+            System Administration</br>
 			</td>
 		  </tr>
 		  <tr>
@@ -63,7 +64,9 @@
 			<b>Experience:</b>
 			</td>
 			<td>
-			-
+			Working as Lecturer, QUEST since January 2011 </br>
+            One Year as IT Admin & Faculty Member Computer Science (SZABIST) </br>
+            One Year as IT Technical Team of Sukkur IBA </br>
 			</td>
 		  </tr>
 		  <tr>
@@ -79,7 +82,8 @@
 			<b>Courses Currently Teaching:</b>
 			</td>
 			<td>
-			-
+			Automata Theory (2nd year)</br>
+            Microprocessor (3rd year)</br>
 			</td>
 		  </tr>
 		  <tr>
@@ -87,7 +91,10 @@
 			<b>Courses Taught Previously:</b>
 			</td>
 			<td>
-			-
+			Microprocessor Systems </br>
+            Microprocessor Technologies </br>
+            Computer Systems & Programming </br>
+            Introduction to Computing </br>
 			</td>
 		  </tr>
 		  <tr>
@@ -95,7 +102,7 @@
 			<b>Publications:</b>
 			</td>
 			<td>
-			-
+			1. Pardeep Kumar, Iftikhar A. Koondhar, Akhtar H. Jalbani, Agha Shiraz A. Khan & M. Aamir Bhutto. "A Study Related to Protocol and Ports Usage for the ISA Server", published in the Quaid-e-Awam University of Engineering, Science & Technology Research Journal, Volume 11, Number 2, 2012
 			</td>
 		  </tr>
 		  <tr>
@@ -103,7 +110,7 @@
 			<b>Professional Memberships:</b>
 			</td>
 			<td>
-			-
+			Pakistan Engineering Council (PEC)
 			</td>
 		  </tr>
 	  </table>
