--- a/pages/faculty/24.html
+++ b/pages/faculty/24.html
@@ -12,16 +12,16 @@
 
 <div class="wrapper row4" style="height:1000px;">
   <div id="container" class="clear"> 
-    <div id="content" style="width:65%">
-      <h1 class="title">Dr. Umair Ali Khan</h1>
-      <img src="../../images/umair.jpg" style="float:left;height:200px;">
+    <div id="content" style="width:65%;">
+      <h1 class="title">Engr. Ayesha Jokhio</h1>
+      <img src="../../images/ayesha.jpg" style="float:left;height:200px;">
 	  <table style="width:100%;color:BLACK;font-size:13;border:0;margin-top:240px;">
 		  <tr>
 			<td>
 			<b>Position:</b>
 			</td>
 			<td>
-			Associate Professor
+			Lab Engineer
 			</td>
 		  </tr>
 		  <tr>
@@ -29,7 +29,7 @@
 			<b>Email:</b>
 			</td>
 			<td>
-			umair.khan@quest.edu.pk
+			aishajokhio@quest.edu.pk 
 			</td>
 		  </tr>
 		  <tr>
@@ -45,9 +45,7 @@
 			<b>Qualification:</b>
 			</td>
 			<td>
-			PhD (Austria): Dynamic power management in portable devices</br>
-			MS (Austria): Intelligent Transportation Systems</br>
-			B.E (QUEST): Computer Systems Engineering 
+			BS (Computer Engineering) from COMSATS Institute of Information Technology Lahore
 			</td>
 		  </tr>
 		  <tr>
@@ -55,7 +53,7 @@
 			<b>Research Interest:</b>
 			</td>
 			<td>
-			-
+			Control Systems, Real Time Embedded Systems 
 			</td>
 		  </tr>
 		  <tr>
@@ -63,7 +61,7 @@
 			<b>Experience:</b>
 			</td>
 			<td>
-			-
+			Computer Programming, Control Systems, Web Engineering 
 			</td>
 		  </tr>
 		  <tr>
@@ -79,7 +77,7 @@
 			<b>Courses Currently Teaching:</b>
 			</td>
 			<td>
-			-
+			Machine Learning, Software Engineering, Control Systems & Robotics, Introduction to Computers
 			</td>
 		  </tr>
 		  <tr>
@@ -87,7 +85,7 @@
 			<b>Courses Taught Previously:</b>
 			</td>
 			<td>
-			-
+			Computer Programming, Data Communication & Computer Networks, Introduction to Computing
 			</td>
 		  </tr>
 		  <tr>
@@ -103,7 +101,7 @@
 			<b>Professional Memberships:</b>
 			</td>
 			<td>
-			-
+			Pakistan Engineering Council (PEC) 
 			</td>
 		  </tr>
 	  </table>
