--- a/pages/faculty/25.html
+++ b/pages/faculty/25.html
@@ -12,16 +12,16 @@
 
 <div class="wrapper row4" style="height:1000px;">
   <div id="container" class="clear"> 
-    <div id="content" style="width:65%">
-      <h1 class="title">Dr. Umair Ali Khan</h1>
-      <img src="../../images/umair.jpg" style="float:left;height:200px;">
+    <div id="content" style="width:65%;">
+      <h1 class="title">Engr. Haseena Rind Baloch</h1>
+      <img src="../../images/haseena.jpg" style="float:left;height:200px;">
 	  <table style="width:100%;color:BLACK;font-size:13;border:0;margin-top:240px;">
 		  <tr>
 			<td>
 			<b>Position:</b>
 			</td>
 			<td>
-			Associate Professor
+			Lab Engineer
 			</td>
 		  </tr>
 		  <tr>
@@ -29,7 +29,7 @@
 			<b>Email:</b>
 			</td>
 			<td>
-			umair.khan@quest.edu.pk
+			engrhaseenabaloch@quest.edu.pk
 			</td>
 		  </tr>
 		  <tr>
@@ -45,9 +45,7 @@
 			<b>Qualification:</b>
 			</td>
 			<td>
-			PhD (Austria): Dynamic power management in portable devices</br>
-			MS (Austria): Intelligent Transportation Systems</br>
-			B.E (QUEST): Computer Systems Engineering 
+			B.E Computer Systems Engineering (QUEST) 
 			</td>
 		  </tr>
 		  <tr>
@@ -55,7 +53,12 @@
 			<b>Research Interest:</b>
 			</td>
 			<td>
-			-
+			Wireless Sensor Networks</br>
+			Internet of Things</br>
+			Advance Communication Networks</br>
+			Mobile Ad Hoc Networks</br>
+			IEEE 802.15.4 / ZigBee</br>
+			Energy / Delay Bound Applications 
 			</td>
 		  </tr>
 		  <tr>
