--- a/pages/faculty.html
+++ b/pages/faculty.html
@@ -12,7 +12,7 @@
 	{
 		for(i = 1; i<val; i++)
 			document.getElementById(i).style.color='#591F58';
-		for(i=val+1; i<8; i++)
+		for(i=val+1; i<=26; i++)
 			document.getElementById(i).style.color='#591F58';
 		document.getElementById(val).style.color='brown';
 		document.getElementById('faculty').src='faculty/'+val+'.html';
@@ -22,61 +22,56 @@
 </head>
 <body id="top">
 <div class="wrapper row1">
-  <div id="header" class="clear">
+  <div id="header" class="clear" >
     <div class="fl_left">
-      <h1 style="margin-top:5px; margin-left:110px;"><a href="#">Computer Systems Engineering Department</a></h1>
-	  <h6 style="margin-top:5px; margin-left:110px;"><a href="#">Quaid-e-Awam University of Engineering, Science & Technology, Nawabshah</a></h6>
-	  <a href="http://quest.edu.pk" target="_blank"><img src="../images/logo.png" style="padding:0px; height:100px;width:200px;margin:-65px 0px -120px -70px;"></a>
-      <!--<p>QUEST, Nawabshah-Pakistan</p>-->
-    </div>
+        <img src="../images/header.png" style="padding:0px; height:20%;width:85%;margin-left:-3%">
   </div>
-</div> <br>
+
+  <div style="float:right;width:17%;margin-top:-2%;margin-right:-13%;">
+      <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+          <a class="a2a_button_facebook"></a>
+          <a class="a2a_button_twitter"></a>
+          <a class="a2a_button_google_plus">
+              <a class="a2a_button_linkedin"></a>
+      </div>
+      <script async src="https://static.addtoany.com/menu/page.js"></script>
+  </div>
+
+  </div>
+</div>
 <!-- ####################################################################################################### -->
-<div class="wrapper row2">
-  <div class="main-navigation">
+<div class="wrapper row2" style="margin-top:-1%">
+  <div class="main-navigation" style="line-height:14px;word-spacing:0px; width:765px;">
     <ul>
-      <li><a href="../index.html">Home</a></li>  
-    <li><a href="faculty.html">Faculty</a></li>
+      <li><a href="index.html">Home</a></li>
+    <li><a href="pages/faculty.html">Faculty</a></li>
 	  <li><a href="#">Programs</a>
         <ul>
-          <li><a href="#">Bachelors</a>
-				<ul>
-				  <li><a href="faculty.html">Faculty</a></li>
-				  <li><a href="B-courses.html">Courses</a></li>
-				  <li><a href="students.html">Students</a></li>
-				</ul>
+          <li><a href="pages/B-courses.html">Bachelors</a>
 		  </li>
-          <li><a href="#">Masters</a>
-			<ul>
-				  <li><a href="programs/masters/faculty.html">Faculty</a></li>
-				  <li><a href="under-construction.html">Courses</a></li>
-			</ul>
+          <li><a href="pages/under-construction.html">Masters</a>
 		  </li>
-          <li><a href="#">PhD</a>
-			<ul>
-				  <li><a href="programs/phd/faculty.html">Faculty</a></li>
-				  <li><a href="under-construction.html">Courses</a></li>
-			</ul>
+          <li><a href="pages/under-construction.html">PhD</a>
 		  </li>
         </ul>
       </li>
 	  <li><a href="#">Resources</a>
         <ul>
-          <li><a href="lib.html">Library</a></li>
-          <li><a href="resourses.html">Labs</a></li>
-          <li><a href="under-construction.html">Downloads</a></li>
+          <li><a href="pages/lib.html">Library</a></li>
+          <li><a href="pages/resourses.html">Labs</a></li>
+          <li><a href="pages/under-construction.html">Downloads</a></li>
         </ul>
       </li>
 	  <li><a href="#">Research Groups</a>
         <ul>
-          <li><a href="under-construction.html">Computer Vision</a></li>
-          <li><a href="under-construction.html">Network Security</a></li>
-          <li><a href="under-construction.html">Wireless Sensor Network</a></li>
-		  <li><a href="publications.html">Publications</a></li>
+          <li><a href="pages/CV.html">Computer Vision</a></li>
+          <li><a href="pages/NS.html">Network Security</a></li>
+          <li><a href="pages/WSN.html">Wireless Sensor Network</a></li>
+		  <li><a href="pages/publications.html">Publications</a></li>
         </ul>
       </li>
-	  <li><a href="under-construction.html">Software Development</a></li>
-	  <li  class="last"><a href="contact.html">Contact</a></li>
+	  <li><a href="pages/PEC.html">PEC Accedreditation</a></li>
+	  <li  class="last"><a href="pages/contact.html">Contact</a></li>
     </ul>
     <div  class="clear"></div>
   </div>
@@ -124,10 +119,10 @@
       </div>
 	  <br>
     </div>
-	<div id="content" style="width:63%;margin:-847px 0px 0px 280px;">
+	<div id="content" style="width:65%;margin:-847px 0px 0px 280px;">
 		<!--<iframe src="faculty/pardeep.html" style="border:0px;width:100%;height:auto;position:center;overflow:hidden;padding:0px 0px 2px 0px;" scrolling="no">
 		-->
-		<iframe id="faculty" src="faculty/2.html" style="margin-top:-3.15%;overflow: hidden; height: 70%; width: 65%; position: absolute; border:0px;" height="100%" width="100%" scrolling="no">
+		<iframe id="faculty" src="faculty/2.html" style="margin-top:-3.15%;overflow: hidden; height: 100%; width: 65%; position: absolute; border:0px;" height="100%" width="100%" scrolling="no">
 		</iframe>
 	</div>
   </div>
@@ -135,8 +130,8 @@
 <!-- ####################################################################################################### -->
 <div class="wrapper">
   <div id="copyright" class="clear">
-    <center><p class="fl_left">Copyright &copy; 2015-16 - All Rights Reserved <br> <a href="http://www.quest.edu.pk">QUEST, Nawabshah-Pakistan</a></p></center>
-    <center><p class="fl_right">Developed and Maintained by <br><a target="_blank" href="http://zuhaib-shaikh.neocities.org">Zuhaib A. Shaikh</a> | <a target="_blank" href="http://umair-khan.quest.edu.pk">Umair A. Khan</a><br><a target="_blank" href="https://www.facebook.com/daniyalsaeed6">Daniyal(14cs13)</a> | <a target="_blank" href="https://www.facebook.com/aaqibakhtarblogger">Aaqib(14cs11)</a></p></center>
+    <center><p class="fl_left">Copyright &copy; 2016-17 - All Rights Reserved <br> <a href="http://www.quest.edu.pk">QUEST, Nawabshah-Pakistan</a></p></center>
+    <center><p class="fl_right">Developed and Maintained by <br><a target="_blank" href="http://zuhaib-shaikh.neocities.org">Zuhaib A. Shaikh</a> | <a target="_blank" href="http://umair-khan.quest.edu.pk">Umair A. Khan</a></p></center>
   </div>
 </div>
 </body>
