--- a/pages/faculty/15.html
+++ b/pages/faculty/15.html
@@ -12,16 +12,16 @@
 
 <div class="wrapper row4" style="height:1000px;">
   <div id="container" class="clear"> 
-    <div id="content" style="width:65%">
-      <h1 class="title">Dr. Umair Ali Khan</h1>
-      <img src="../../images/umair.jpg" style="float:left;height:200px;">
+    <div id="content" style="width:65%;">
+      <h1 class="title">Dr. Imtiaz Ali Halepoto</h1>
+      <img src="../../images/imtiaz.jpg" style="float:left;height:200px;">
 	  <table style="width:100%;color:BLACK;font-size:13;border:0;margin-top:240px;">
 		  <tr>
 			<td>
 			<b>Position:</b>
 			</td>
 			<td>
-			Associate Professor
+			Assistant Professor 
 			</td>
 		  </tr>
 		  <tr>
@@ -29,7 +29,7 @@
 			<b>Email:</b>
 			</td>
 			<td>
-			umair.khan@quest.edu.pk
+			halepoto@quest.edu.pk
 			</td>
 		  </tr>
 		  <tr>
@@ -37,7 +37,7 @@
 			<b>Phone:</b>
 			</td>
 			<td>
-			0244-9370381-5    Ext.    2131
+			0244-9370381-5    Ext.    213-
 			</td>
 		  </tr>
 		  <tr>
@@ -45,9 +45,9 @@
 			<b>Qualification:</b>
 			</td>
 			<td>
-			PhD (Austria): Dynamic power management in portable devices</br>
-			MS (Austria): Intelligent Transportation Systems</br>
-			B.E (QUEST): Computer Systems Engineering 
+			PhD (Hong Kong)</br>
+			M. E. (Hong Kong)</br>
+			B. E. (QUEST)</br>
 			</td>
 		  </tr>
 		  <tr>
@@ -55,7 +55,7 @@
 			<b>Research Interest:</b>
 			</td>
 			<td>
-			-
+			- 
 			</td>
 		  </tr>
 		  <tr>
