--- a/pages/faculty/16.html
+++ b/pages/faculty/16.html
@@ -12,16 +12,16 @@
 
 <div class="wrapper row4" style="height:1000px;">
   <div id="container" class="clear"> 
-    <div id="content" style="width:65%">
-      <h1 class="title">Dr. Umair Ali Khan</h1>
-      <img src="../../images/umair.jpg" style="float:left;height:200px;">
+    <div id="content" style="width:65%;">
+      <h1 class="title">Engr. Abdul Wahid Memon</h1>
+      <img src="../../images/abdulwahid.jpg" style="float:left;height:200px;">
 	  <table style="width:100%;color:BLACK;font-size:13;border:0;margin-top:240px;">
 		  <tr>
 			<td>
 			<b>Position:</b>
 			</td>
 			<td>
-			Associate Professor
+			Lecturer
 			</td>
 		  </tr>
 		  <tr>
@@ -29,7 +29,7 @@
 			<b>Email:</b>
 			</td>
 			<td>
-			umair.khan@quest.edu.pk
+			awam@quest.edu.pk
 			</td>
 		  </tr>
 		  <tr>
@@ -45,9 +45,8 @@
 			<b>Qualification:</b>
 			</td>
 			<td>
-			PhD (Austria): Dynamic power management in portable devices</br>
-			MS (Austria): Intelligent Transportation Systems</br>
-			B.E (QUEST): Computer Systems Engineering 
+			M.S (PARIS SUD 11, France): Computer Science</br>
+			B.E (M.U.E.T Pakistan): Computer Systems Engineering</br>
 			</td>
 		  </tr>
 		  <tr>
@@ -55,7 +54,7 @@
 			<b>Research Interest:</b>
 			</td>
 			<td>
-			-
+			- 
 			</td>
 		  </tr>
 		  <tr>
