--- a/pages/faculty/19.html
+++ b/pages/faculty/19.html
@@ -13,15 +13,15 @@
 <div class="wrapper row4" style="height:1000px;">
   <div id="container" class="clear"> 
     <div id="content" style="width:65%;">
-      <h1 class="title">Dr. Fizza Abbas</h1>
-      <img src="../../images/fiza.jpg" style="float:left;height:200px;">
+      <h1 class="title">Engr. Muhammad Awais Rajput</h1>
+      <img src="../../images/awais.jpg" style="float:left;height:200px;">
 	  <table style="width:100%;color:BLACK;font-size:13;border:0;margin-top:240px;">
 		  <tr>
 			<td>
 			<b>Position:</b>
 			</td>
 			<td>
-			Assistant Professor 
+			Assistant Professor (On Study Leave)
 			</td>
 		  </tr>
 		  <tr>
@@ -29,7 +29,7 @@
 			<b>Email:</b>
 			</td>
 			<td>
-			fiza@quest.edu.pk
+			engr.awais.rajput@gmail.com , awaisrajput@quest.edu.pk
 			</td>
 		  </tr>
 		  <tr>
@@ -37,7 +37,7 @@
 			<b>Phone:</b>
 			</td>
 			<td>
-			0244-9370381-5    Ext.    2131
+			0244-9370381-5    Ext.    2631
 			</td>
 		  </tr>
 		  <tr>
@@ -45,9 +45,7 @@
 			<b>Qualification:</b>
 			</td>
 			<td>
-			B.E (QUEST)</br>
-            M.E (MUET) <br>
-			PhD (S.Korea)
+			M.E Computer Systems, QUEST
 			</td>
 		  </tr>
 		  <tr>
@@ -55,7 +53,7 @@
 			<b>Research Interest:</b>
 			</td>
 			<td>
-			-
+			Image processing, computer vision, artificial intelligence, embedded systems, approximate computing 
 			</td>
 		  </tr>
 		  <tr>
@@ -63,7 +61,11 @@
 			<b>Experience:</b>
 			</td>
 			<td>
-			-
+			(i) Assistant Professor, CSE Department, since Jan 2nd, 2016.</br>
+            (ii) Lecturer, CSE Department from Aug 23rd 2012 to Jan 1st, 2016.</br>
+            (iii) Teaching Assistant, BSCS Department from Dec 29th 2010 to Aug 22nd, 2012. </br>
+			(iv) Internee Faculty member, CSE Department from February 2010 to December 2010.</br>
+            (v) Trainee computer programmer at AWA software Karachi from April 2009 to October 2009.</br>
 			</td>
 		  </tr>
 		  <tr>
@@ -71,7 +73,8 @@
 			<b>Current Research:</b>
 			</td>
 			<td>
-			-
+			(i) Image processing using GPGPU
+            (ii) Scene classification using machine learning techniques
 			</td>
 		  </tr>
 		  <tr>
@@ -79,7 +82,7 @@
 			<b>Courses Currently Teaching:</b>
 			</td>
 			<td>
-			-
+			Computer Systems & Programming (Mechanical Engineering)
 			</td>
 		  </tr>
 		  <tr>
@@ -87,7 +90,7 @@
 			<b>Courses Taught Previously:</b>
 			</td>
 			<td>
-			-
+			Microprocessor Systems (Electrical Engineering)
 			</td>
 		  </tr>
 		  <tr>
@@ -95,7 +98,9 @@
 			<b>Publications:</b>
 			</td>
 			<td>
-			-
+			Zuhaib Ahmed Shaikh, Umair Ali Khan, Muhammad Awais Rajput, Abdul Wahid Memon,"Machine Learning Based Number Plate Detection and Recognition", in proceedings of 5th International Conference on Pattern Recognition Applications and Methods, (ICPRAM 2016), 24-26 February 2016, Rome Italy.
+            Muhammad Awais Rajput, Umair Ali Khan, Nisar Ahmed Memon, ?Frequency Domain Image Filtering Using CUDA?, Mehran University Research Journal of Engineering & Technology, Volume 33, No. 4, October 2014
+
 			</td>
 		  </tr>
 		  <tr>
@@ -103,7 +108,7 @@
 			<b>Professional Memberships:</b>
 			</td>
 			<td>
-			-
+			Pakistan Engineering Council (PEC)
 			</td>
 		  </tr>
 	  </table>
