--- a/pages/faculty/2.html
+++ b/pages/faculty/2.html
@@ -8,12 +8,12 @@
 
 
 
-<div class="wrapper row4">
+<div class="wrapper row4" style="height:1000px;">
   <div id="container" class="clear"> 
     <div id="content" style="width:65%;">
       <h1 class="title">Dr. Pardeep Kumar</h1>
       <img src="../../images/pk.jpg" style="float:left;height:200px;">
-	  <table style="width:100%;color:BLACK;font-size:12;border:0;margin-top:240px;">
+	  <table style="width:100%;color:BLACK;font-size:13;border:0;margin-top:240px;">
 		  <tr>
 			<td>
 			<b>Position:</b>
