--- a/pages/faculty/21.html
+++ b/pages/faculty/21.html
@@ -13,15 +13,15 @@
 <div class="wrapper row4" style="height:1000px;">
   <div id="container" class="clear"> 
     <div id="content" style="width:65%">
-      <h1 class="title">Dr. Umair Ali Khan</h1>
-      <img src="../../images/umair.jpg" style="float:left;height:200px;">
+      <h1 class="title">Engr. Shahzana Memon</h1>
+      <img src="../../images/shahzana.jpg" style="float:left;height:200px;">
 	  <table style="width:100%;color:BLACK;font-size:13;border:0;margin-top:240px;">
 		  <tr>
 			<td>
 			<b>Position:</b>
 			</td>
 			<td>
-			Associate Professor
+			Lecturer
 			</td>
 		  </tr>
 		  <tr>
@@ -29,7 +29,7 @@
 			<b>Email:</b>
 			</td>
 			<td>
-			umair.khan@quest.edu.pk
+			shahzanamemon@hotmail.com
 			</td>
 		  </tr>
 		  <tr>
@@ -45,9 +45,7 @@
 			<b>Qualification:</b>
 			</td>
 			<td>
-			PhD (Austria): Dynamic power management in portable devices</br>
-			MS (Austria): Intelligent Transportation Systems</br>
-			B.E (QUEST): Computer Systems Engineering 
+			B.E Computer Systems (QUEST)
 			</td>
 		  </tr>
 		  <tr>
