--- a/pages/faculty/23.html
+++ b/pages/faculty/23.html
@@ -12,16 +12,16 @@
 
 <div class="wrapper row4" style="height:1000px;">
   <div id="container" class="clear"> 
-    <div id="content" style="width:65%">
-      <h1 class="title">Dr. Umair Ali Khan</h1>
-      <img src="../../images/umair.jpg" style="float:left;height:200px;">
+    <div id="content" style="width:65%;">
+      <h1 class="title">Engr. Beenish Qureshi</h1>
+      <img src="../../images/beenish.jpg" style="float:left;height:200px;">
 	  <table style="width:100%;color:BLACK;font-size:13;border:0;margin-top:240px;">
 		  <tr>
 			<td>
 			<b>Position:</b>
 			</td>
 			<td>
-			Associate Professor
+			Lab Engineer
 			</td>
 		  </tr>
 		  <tr>
@@ -29,7 +29,7 @@
 			<b>Email:</b>
 			</td>
 			<td>
-			umair.khan@quest.edu.pk
+			beenish@quest.edu.pk
 			</td>
 		  </tr>
 		  <tr>
@@ -45,9 +45,8 @@
 			<b>Qualification:</b>
 			</td>
 			<td>
-			PhD (Austria): Dynamic power management in portable devices</br>
-			MS (Austria): Intelligent Transportation Systems</br>
-			B.E (QUEST): Computer Systems Engineering 
+			M.E in Computer Communication Networks [in progress] (QUES)
+            B.E in Computer Systems Engineering (QUEST Nawabshah)
 			</td>
 		  </tr>
 		  <tr>
@@ -55,7 +54,7 @@
 			<b>Research Interest:</b>
 			</td>
 			<td>
-			-
+			Image Processing, QoS in MANETs 
 			</td>
 		  </tr>
 		  <tr>
@@ -79,7 +78,7 @@
 			<b>Courses Currently Teaching:</b>
 			</td>
 			<td>
-			-
+			Network Security, Computer Graphics, Database Management system, Embedded systems development 
 			</td>
 		  </tr>
 		  <tr>
@@ -87,7 +86,7 @@
 			<b>Courses Taught Previously:</b>
 			</td>
 			<td>
-			-
+			Control systems & Robotics, Operating systems, Data communication & Networks, Parallel & Distributed computing
 			</td>
 		  </tr>
 		  <tr>
