--- a/pages/publications.html
+++ b/pages/publications.html
@@ -84,7 +84,7 @@
 <div class="wrapper">
   <div id="copyright" class="clear">
     <center><p class="fl_left">Copyright &copy; 2015-16 - All Rights Reserved <br> <a href="http://www.quest.edu.pk">QUEST, Nawabshah-Pakistan</a></p></center>
-    <center><p class="fl_right">Developed and Maintained by <br><a target="_blank" href="http://zuhaib-shaikh.neocities.org">Zuhaib A. Shaikh</a> | <a target="_blank" href="http://umair-khan.quest.edu.pk">Umair A. Khan</a><br><a target="_blank" href="https://www.facebook.com/daniyalsaeed6">Daniyal(14cs13)</a> | <a target="_blank" href="https://www.facebook.com/aaqibakhtarblogger">Aaqib(14cs11)</a></p></center>
+    <center><p class="fl_right">Developed and Maintained by <br><a target="_blank" href="http://zuhaib-shaikh.neocities.org">Zuhaib A. Shaikh</a> | <a target="_blank" href="http://umair-khan.quest.edu.pk">Umair A. Khan</a></p></center>
   </div>
 </div>
 </body>
