updated links of all the pages

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ margin-right:auto;
 		  <li><a href="pages/publications.html">Publications</a></li>
         </ul>
       </li>
-	  <li><a href="pages/PEC.html">PEC Accedreditation</a></li>
+	  <li><a href="pages/PEC.html">PEC Accreditation</a></li>
 	  <li  class="last"><a href="pages/contact.html">Contact</a></li>
     </ul>
     <div  class="clear"></div>
