updated logo on each page

--- a/pages/CV.html
+++ b/pages/CV.html
@@ -14,12 +14,19 @@
 <div class="wrapper row1">
     <div id="header" class="clear" >
         <div class="fl_left">
-            <a href="http://quest.edu.pk" target="_blank"><img src="images/logo.png" style="padding:0px; height:100px;width:110px;margin:0px 0px -120px -70px;"></a>
-            <h1 style="margin-top:5px;margin-left:60px;"><a href="#">Computer Systems Engineering Department</a></h1>
-            <h2 style="margin-left:60px; margin-bottom:0px;">Quaid-e-awam University of Engineering, Science & Technology,</h2>
-            <h2 style="margin-left:60px;margin-bottom:0px;">Nawabshah-Pakistan</h2>
-
+            <img src="../images/header.png" style="padding:0px; height:20%;width:85%;margin-left:-3%">
         </div>
+
+        <div style="float:right;width:17%;margin-top:-2%;margin-right:-13%;">
+            <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+                <a class="a2a_button_facebook"></a>
+                <a class="a2a_button_twitter"></a>
+                <a class="a2a_button_google_plus">
+                    <a class="a2a_button_linkedin"></a>
+            </div>
+            <script async src="https://static.addtoany.com/menu/page.js"></script>
+        </div>
+
     </div>
 </div>
 <!-- ####################################################################################################### -->
