--- a/pages/under-construction.html
+++ b/pages/under-construction.html
@@ -12,15 +12,23 @@
 </head>
 <body id="top">
 <div class="wrapper row1">
-  <div id="header" class="clear">
-    <div class="fl_left">
-      <h1 style="margin-top:5px; margin-left:110px;"><a href="#">Computer Systems Engineering Department</a></h1>
-	  <h6 style="margin-top:5px; margin-left:110px;"><a href="#">Quaid-e-Awam University of Engineering, Science & Technology, Nawabshah</a></h6>
-	  <a href="http://quest.edu.pk" target="_blank"><img src="../images/logo.png" style="padding:0px; height:100px;width:200px;margin:-65px 0px -120px -70px;"></a>
-      <!--<p>QUEST, Nawabshah-Pakistan</p>-->
+    <div id="header" class="clear" >
+        <div class="fl_left">
+            <img src="../images/header.png" style="padding:0px; height:20%;width:85%;margin-left:-3%">
+        </div>
+
+        <div style="float:right;width:17%;margin-top:-2%;margin-right:-13%;">
+            <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+                <a class="a2a_button_facebook"></a>
+                <a class="a2a_button_twitter"></a>
+                <a class="a2a_button_google_plus">
+                    <a class="a2a_button_linkedin"></a>
+            </div>
+            <script async src="https://static.addtoany.com/menu/page.js"></script>
+        </div>
+
     </div>
-  </div>
-</div> <br>
+</div>
 <!-- ####################################################################################################### -->
 <div class="wrapper row2">
   <div class="main-navigation">
