--- a/pages/resources.html
+++ b/pages/resources.html
@@ -100,7 +100,9 @@
 	  <br>
     </div>
 	<div id="content" style="width:65%;margin:-846px 0px 0px 280px;">
-		<iframe id="res" src="resources/1.html" style="margin-top:-3.15%;overflow: hidden; height: 100%; width: 65%; position: absolute; border:0px;" height="100%" width="100%" scrolling="no">
+		<!--<iframe src="faculty/pardeep.html" style="border:0px;width:100%;height:auto;position:center;overflow:hidden;padding:0px 0px 2px 0px;" scrolling="no">
+		-->
+		<iframe id="faculty" src="faculty/2.html" style="margin-top:-3.15%;overflow: hidden; height: 100%; width: 65%; position: absolute; border:0px;" height="100%" width="100%" scrolling="no">
 		</iframe>
 	</div>
   </div>
