--- a/pages/resources.html
+++ b/pages/resources.html
@@ -85,7 +85,7 @@
 <!-- ####################################################################################################### -->
 <div class="wrapper row4">
   <div id="container" class="clear"> 
-    <div id="left_column" style="width:25%;">
+    <div id="left_column" style="width:25%;height:800px;">
       <div class="holder">
         <h2 class="title">Labs</h2>
         <ul class="nostart" style="line-height:30px;">
@@ -100,9 +100,8 @@
 	  <br>
     </div>
 	<div id="content" style="width:65%;margin:-846px 0px 0px 280px;">
-		<!--<iframe src="faculty/pardeep.html" style="border:0px;width:100%;height:auto;position:center;overflow:hidden;padding:0px 0px 2px 0px;" scrolling="no">
-		-->
-		<iframe id="faculty" src="faculty/2.html" style="margin-top:-3.15%;overflow: hidden; height: 100%; width: 65%; position: absolute; border:0px;" height="100%" width="100%" scrolling="no">
+
+		<iframe id="res" src="resources/1.html" style="margin-top:1.6%;overflow: hidden; height: 100%; width: 65%; position: absolute; border:0px;" height="100%" width="100%" scrolling="no">
 		</iframe>
 	</div>
   </div>
